--- a/arxiv/2022_06_arxiv.html
+++ b/arxiv/2022_06_arxiv.html
@@ -201,7 +201,31 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.07717">https://arxiv.org/abs/2206.07717</a></span> Magnetic Bloch Theorem and Reentrant Flat Bands in Twisted Bilayer Graphene at 2π Flux (Andrei Bernevig)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.07752">https://arxiv.org/abs/2206.07752</a></span> Enigma of the vortex state in a strongly correlated d-wave superconductor (Kun Yang)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.08239">https://arxiv.org/abs/2206.08239</a></span> The Hierarchical Graphene model ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.07725">https://arxiv.org/abs/2206.07725</a></span> Theory of oblique topological insulators *** (Eduardo Fradkin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.07725">https://arxiv.org/abs/2206.07725</a></span> Theory of oblique topological insulators *** (Eduardo Fradkin)</p><br>
+<p class="p1">20220620</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.08599">https://arxiv.org/abs/2206.08599</a></span> Delayed Thermalization in Mass-Deformed SYK</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.08385">https://arxiv.org/abs/2206.08385</a></span> Giant modulation of optical nonlinearity by Floquet engineering (Je-Geun Park, L. Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.09480">https://arxiv.org/abs/2108.09480</a></span> Zero sound and plasmon modes for non-Fermi liquids *** (Ipsita Mandal)</p>
+<p class="p2"><br></p>
+<p class="p1">20220622</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.10539">https://arxiv.org/abs/2206.10539</a></span> Cascade of transitions in twisted bilayer graphene – the Van Hove scenario *** (Laura Classen, Yuxuan Wang, Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.08939">https://arxiv.org/abs/2206.08939</a></span> Deconfined criticalities and dualities between chiral spin liquid, topological superconductor and charge density wave Chern insulator ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.09392">https://arxiv.org/abs/2206.09392</a></span> The electromagnetic duality and the 3+1D O(6) non-linear sigma model with a level-1 Wess-Zumino-Witten term **** (Dung-Hai Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.09393">https://arxiv.org/abs/2206.09393</span></a> Non-abelian bosonization of fermion symmetry-protected topological states **** (Dung-Hai Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.09687">https://arxiv.org/abs/2206.09687</span></a> Hydrodynamics of charged two-dimensional Dirac systems I: thermo-electric transport</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.09941">https://arxiv.org/abs/2206.09941</a></span> Excitations in the Higher Lattice Gauge Theory Model for Topological Phases III: the 3+1d Case</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.09985">https://arxiv.org/abs/2206.09985</a></span> Gauge and Scalar Fields on CP2: A Gauge-invariant Analysis II. The measure for gauge fields and a 4d WZW theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.09929">https://arxiv.org/abs/2206.09929</a></span> Locality and error correction in quantum dynamics with measurement *** (Andrew Lucas)</p>
+<p class="p2"><br></p>
+<p class="p1">20220623</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.10636">https://arxiv.org/abs/2206.10636</a></span> Witten effect and Z-classification of three-dimensional topological insulators *** (Pallab Goswami)<br>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.10647">https://arxiv.org/abs/2206.10647</span></a> Field-induced Kitaev multipolar liquid in d2 honeycomb Mott insulators (Ahmed Rayyan, Derek Churchill, Hae-Young Kee)</p>
+<p class="p2"><br></p>
+<p class="p1">20220624</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.11528">https://arxiv.org/abs/2206.11528</a></span> Quantum Many-Body Scars: A Quasiparticle Perspective *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.11806">https://arxiv.org/abs/2206.11806</a></span> LIFSHITZ SYMMETRY: LIE ALGEBRAS, SPACETIMES AND PARTICLES ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.11761">https://arxiv.org/abs/2206.11761</a></span> Zipper Entanglement Renormalization for Free Fermions *** (Hoi Chun Po)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.11754">https://arxiv.org/abs/2206.11754</a></span> Eight-vertex criticality in the interacting Kitaev chain **</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
