--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Articles related to my works:
 		<span class="cvitem"> "Non-Fermi liquid behavior and quantum criticality in the multipolar Bose-Fermi Kondo model for cubic heavy fermion systems" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://scholar.google.com/citations?user=wdyTjP0AAAAJ" style="text-decoration:none;color:black">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:black">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
 			<a href="https://arxiv.org/abs/2206.02808">arXiv:2206.02808</a>
 		</li><li><div>
 		<span class="cvitem"> "Fractonic Quantum Phases in Breathing Pyrochlore Lattice" </span>
