--- a/arxiv/2022_06_arxiv.html
+++ b/arxiv/2022_06_arxiv.html
@@ -225,7 +225,31 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.11528">https://arxiv.org/abs/2206.11528</a></span> Quantum Many-Body Scars: A Quasiparticle Perspective *****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.11806">https://arxiv.org/abs/2206.11806</a></span> LIFSHITZ SYMMETRY: LIE ALGEBRAS, SPACETIMES AND PARTICLES ****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.11761">https://arxiv.org/abs/2206.11761</a></span> Zipper Entanglement Renormalization for Free Fermions *** (Hoi Chun Po)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.11754">https://arxiv.org/abs/2206.11754</a></span> Eight-vertex criticality in the interacting Kitaev chain **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.11754">https://arxiv.org/abs/2206.11754</a></span> Eight-vertex criticality in the interacting Kitaev chain **</p><br>
+<p class="p1">20220627</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.12287">https://arxiv.org/abs/2206.12287</a></span> Bosons thermodynamics in the gravity field</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.11958">https://arxiv.org/abs/2206.11958</a></span> Foliated order parameter in a fracton phase transition ***</p>
+<p class="p2"><br></p>
+<p class="p1">20220628</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.12841">https://arxiv.org/abs/2206.12841</a></span> Nonequilibrium spintronic transport through Kondo impurities (Jan von Delft)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.12877">https://arxiv.org/abs/2206.12877</a></span> Emergent Dipole Gauge Fields and Fractons *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.09425">https://arxiv.org/abs/2202.09425</a></span> The Fundamentality of Fields *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.05726">https://arxiv.org/abs/2202.05726</a></span> Fundamental scalar field with zero dimension from anomaly cancellations (G.E.Volovik)</p>
+<p class="p2"><br></p>
+<p class="p1">20220629</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.13527">https://arxiv.org/abs/2206.13527</a></span> Measurement as a shortcut to long-range entangled quantum matter *** (Isaac H. Kim, Timothy H. Hsieh</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.13547">https://arxiv.org/abs/2206.13547</a></span> Precise Low-Temperature Expansions for the Sachdev-Ye-Kitaev model *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14197">https://arxiv.org/abs/2206.14197</a></span> Translation-enriched Z2 spin liquids and topological vison bands: Possible application to α-RuCl3 ***** (Xue-Yang Song, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.13519">https://arxiv.org/abs/2206.13519</a></span> How quantum phases on cylinders approach the 2d limit (Steven A. Kivelson)<br>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14028">https://arxiv.org/abs/2206.14028</a></span> Fractons: gauging spin models and tensor gauge theory *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.13682">https://arxiv.org/abs/2206.13682</a></span> Quantum geometric effect on Fulde–Ferrell–Larkin–Ovchinnikov superconductivity (Youichi Yanase)</p>
+<p class="p2"><br></p>
+<p class="p1">20220630</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14206">https://arxiv.org/abs/2206.14206</a></span> Non-Perturbative Defects in Tensor Models from Melonic Trees</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14222">https://arxiv.org/abs/2206.14222</a></span> Deconfined Quantum Critical Point with Non-locality ***** (Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14558">https://arxiv.org/abs/2206.14558</a></span> Optical conductivity of semi-Dirac and pseudospin-1 models: Zitterbewegung approach</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14730">https://arxiv.org/abs/2206.14730</a></span> Numerical simulation of non-abelian anyons ** (Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.07725">https://arxiv.org/abs/2206.07725</a></span> Theory of oblique topological insulators **** (Eduardo Fradkin)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
