--- a/arxiv/2022_07_arxiv.html
+++ b/arxiv/2022_07_arxiv.html
@@ -4,7 +4,7 @@
 <title>SangEun Han</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes"/>
-
+<meta charset="utf-8">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- png favicon--> 
@@ -84,9 +84,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 #center {font-size:10pt; width:900px; background-color:FFFFFF; font-family:Open Sans; padding-top:5px;padding-right:10px; padding-bottom:5px; padding-left:10px; margin:0 auto; }
 }
 
-#lastcenter {width:100%; background-color:FFFFFF; text-align:center;
-        margin: 0;
-        padding: 0;}
+#last {width:100%; background-color:FFFFFF; text-align:center;}
 
 .cvitemize { font-size:110%; font-weight: bold;}
 .cvitem { font-weight: bold; font-family:Open Sans;}
@@ -106,12 +104,40 @@ a:hover {text-decoration: underline; color: darkgray;}
 </script>
  <link href='//fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
-
-<body style="background-color:#FFFFFF">
+<style type="text/css">
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'; min-height: 14.0px}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'; color: #dca10d}
+    span.s1 {color: #000000}
+    span.s2 {color: #000000}
+    span.s3 {color: #000000}
+    span.s4 {font: 12.0px '.Apple SD Gothic NeoI'; color: #dca10d}
+    span.s5 {color: #000000}
+  </style>
+<body style="background-color:#EFEFEF">
 
 <div id="center">
 
-<div style="font-size:75%" id="lastcenter">since 2014-12-31 / last update 2022-07-01</div>
+<div id="title">Today's arXiv</div>
+<iframe src="../titlecontent.html" style="width:100%; height:63; border:none"></iframe>
+<!---<div id="titlecontent">
+<span class="cvitemcontent">e-mail: sehan at kaist.ac.kr<br>
+<a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
+<a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
+<br>
+<p class="p1">20220701</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14828">https://arxiv.org/abs/2206.14828</a></span> Majorana nanowires for topological quantum computation: A tutorial *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14900">https://arxiv.org/abs/2206.14900</a></span> Phases of N = 2 Sachdev-Ye-Kitaev models *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.15118">https://arxiv.org/abs/2206.15118</a></span> Anomalies and Symmetry Fractionalization ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.15401">https://arxiv.org/abs/2206.15401</a></span> Line Defect Quantum Numbers &amp; Anomalies *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14829">https://arxiv.org/abs/2206.14829</a></span> Boundary theory of the X-cube model in the continuum ***** (Andreas Karch)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14814">https://arxiv.org/abs/2206.14814</a></span> A universal formula for the density of states with continuous symmetry (Monica Jinwoo Kang, Hirosi Ooguri)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.15385">https://arxiv.org/abs/2206.15385</a></span> Basic introduction to higher-spin theories ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.15279">https://arxiv.org/abs/2206.15279</a></span> UNIFORM IN TIME CONVERGENCE TO BOSE-EINSTEIN CONDENSATION FOR A WEAKLY INTERACTING BOSE GAS WITH EXTERNAL POTENTIALS (JINYEOP LEE)</p>
+	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
+	</div>
+
+<!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
 
 </div>
 </body>
