--- a/arxiv/2022_07_arxiv.html
+++ b/arxiv/2022_07_arxiv.html
@@ -133,7 +133,47 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14829">https://arxiv.org/abs/2206.14829</a></span> Boundary theory of the X-cube model in the continuum ***** (Andreas Karch)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14814">https://arxiv.org/abs/2206.14814</a></span> A universal formula for the density of states with continuous symmetry (Monica Jinwoo Kang, Hirosi Ooguri)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.15385">https://arxiv.org/abs/2206.15385</a></span> Basic introduction to higher-spin theories ****</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.15279">https://arxiv.org/abs/2206.15279</a></span> UNIFORM IN TIME CONVERGENCE TO BOSE-EINSTEIN CONDENSATION FOR A WEAKLY INTERACTING BOSE GAS WITH EXTERNAL POTENTIALS (JINYEOP LEE)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.15279">https://arxiv.org/abs/2206.15279</a></span> UNIFORM IN TIME CONVERGENCE TO BOSE-EINSTEIN CONDENSATION FOR A WEAKLY INTERACTING BOSE GAS WITH EXTERNAL POTENTIALS (JINYEOP LEE)</p><br>
+<p class="p1">20220704</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.00020">https://arxiv.org/abs/2207.00020</a></span> Nonsymmorphic Symmetry Protected Dirac, M ̈obius, and Hourglass Fermions in Topological Materials</p>
+<p class="p2"><a href="https://arxiv.org/abs/2207.00536">https://arxiv.org/abs/2207.00536</a><span class="s2"> LIV in matter *****</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.00016">https://arxiv.org/abs/2207.00016</a></span> Measurement and topological quantum criticality of local and nonlocal Chern markers</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.00467">https://arxiv.org/abs/2207.00467</a></span> Nonequilibrium Phenomena in Driven and Active Coulomb Field Theories ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.09347">https://arxiv.org/abs/2206.09347</a></span> Enhancement of spin-mixing conductance by s-d orbital hybridization in heavy metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14824">https://arxiv.org/abs/2206.14824</a></span> Decomposition in Chern-Simons theories in three dimensions *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.00409">https://arxiv.org/abs/2207.00409</a></span> Effective Fractonic Behavior in a Two-Dimensional Exactly Solvable Spin Liquid *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.00534">https://arxiv.org/abs/2207.00534</a></span> An introduction to Thermal Field Theory and Some of its Application *****</p>
+<p class="p3"><br></p>
+<p class="p1">20220705</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.00605">https://arxiv.org/abs/2207.00605</a></span> Entanglement Witnessing for Lattice Gauge Theories (Philipp Hauke)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.01588">https://arxiv.org/abs/2207.01588</a></span> On minimal residual entropy in non-Fermi liquids ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.00854">https://arxiv.org/abs/2207.00854</a></span> A symmetry principle for gauge theories with fractons ***** (Minyoung You, Gil Young Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.01191">https://arxiv.org/abs/2207.01191</a></span> Pair-breaking in superconductors with strong spin-orbit coupling ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.01440">https://arxiv.org/abs/2207.01440</a></span> On D3-brane Superpotential ***** (Manki Kim)</p>
+<br>
+<p class="p1">20220706</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02203">https://arxiv.org/abs/2207.02203</a></span> Noncrystalline topological superconductors (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.01638">https://arxiv.org/abs/2207.01638</a></span> Topological Mott Insulator at Quarter Filing in the Interacting Haldane Model (Philip W. Phillips)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02123">https://arxiv.org/abs/2207.02123</a></span> A Sport and a Pastime: Model Design and Computation in Quantum Many-Body Systems (Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02188">https://arxiv.org/abs/2207.02188</a></span> Counter-rotating spiral, zigzag, and 120<span class="s3">◦</span> orders from coupled-chain analysis of Kitaev-Gamma-Heisenberg model, and relations to honeycomb iridates (Hae-Young Kee, Ian Affleck)</p>
+<p class="p3"><br></p>
+<p class="p1">20220707</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02240">https://arxiv.org/abs/2207.02240</a></span> Drude-like Thermal Hall Resistivity in the Cuprates (William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02228">https://arxiv.org/abs/2207.02228</a></span> Higher rank chirality and non-Hermitian skin effect in a topolectrical circuit (Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02239">https://arxiv.org/abs/2207.02239</a></span> Twisting the Dirac cones of the SU(4) spin-orbital liquid on the honeycomb lattice (Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02701">https://arxiv.org/abs/2207.02701</a></span> Continuous transition between Ising magnetic order and a chiral spin liquid **** (Joseph Maciejko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02243">https://arxiv.org/abs/2207.02243</a></span> Lectures on Introduction to Quantum Field Theory ***** (Ghanashyam Date)</p>
+<p class="p3"><br></p>
+<p class="p1">20220708</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02901">https://arxiv.org/abs/2207.02901</a></span> A signature index for third order topological insulators</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02973">https://arxiv.org/abs/2207.02973</a></span> Optical absorption measurement of spin Berry curvature and spin Chern marker</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.03316">https://arxiv.org/abs/2207.03316</a></span> Magneto-optical conductivity in the type-I and type-II phases of multi-Weyl semimetals *** (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.03322">https://arxiv.org/abs/2207.03322</a></span> From the Integer to the Fractional Quantum Hall Effect in Graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02892">https://arxiv.org/abs/2207.02892</a></span> Magnetic Skyrmions: Theory and Applications</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02877">https://arxiv.org/abs/2207.02877</a></span> Monitored Quantum Dynamics and the Kitaev Spin Liquid ** (Sagar Vijay)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2207.03319">https://arxiv.org/abs/2207.03319</a><span class="s2"> Topological Speed Limit ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.14765">https://arxiv.org/abs/2112.14765</a></span> Cobordism and Deformation Class of the Standard Model (Juven Wang, Yi-Zhuang You)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2207.03279">https://arxiv.org/abs/2207.03279</a><span class="s2"> Elusive anomalies *****</span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
