--- a/arxiv/2022_07_arxiv.html
+++ b/arxiv/2022_07_arxiv.html
@@ -173,7 +173,34 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02877">https://arxiv.org/abs/2207.02877</a></span> Monitored Quantum Dynamics and the Kitaev Spin Liquid ** (Sagar Vijay)</p>
 <p class="p2"><a href="https://arxiv.org/abs/2207.03319">https://arxiv.org/abs/2207.03319</a><span class="s2"> Topological Speed Limit ***</span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.14765">https://arxiv.org/abs/2112.14765</a></span> Cobordism and Deformation Class of the Standard Model (Juven Wang, Yi-Zhuang You)</p>
-<p class="p2"><a href="https://arxiv.org/abs/2207.03279">https://arxiv.org/abs/2207.03279</a><span class="s2"> Elusive anomalies *****</span></p>
+<p class="p2"><a href="https://arxiv.org/abs/2207.03279">https://arxiv.org/abs/2207.03279</a><span class="s2"> Elusive anomalies *****</span></p><br>
+<p class="p1">20220711</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.03907">https://arxiv.org/abs/2207.03907</a></span> Anomalous Fano factor as a signature of Bogoliubov Fermi surfaces ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.03544">https://arxiv.org/abs/2207.03544</a></span> Emergent Higher-Symmetry Protected Topological Orders in the Confined Phase of U(1) Gauge Theory ***** (Xiao-Gang Wen)</p>
+<p class="p2"><br></p>
+<p class="p1">20220712</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.04370">https://arxiv.org/abs/2207.04370</a></span> Quantum phase transition from a paramagnetic Anderson insulating state to a ferromagnetic many-body localized state via an intermediate ferromagnetic metallic phase (Iksu Jang, Ki-Seok Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.04373">https://arxiv.org/abs/2207.04373</a></span> Renormalization-group Perspective on Gravitational Critical Collapse *** (Liujun Zou)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.04395">https://arxiv.org/abs/2207.04395</a></span> Universal description of dissipative Tomonaga-Luttinger liquids with SU(N ) spin symmetry: Exact spectrum and critical exponents</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.04970">https://arxiv.org/abs/2207.04970</a></span> Quantum corrections to frame-dragging in scattering amplitudes ***** (Jung-Wook Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20220713</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.05092">https://arxiv.org/abs/2207.05092</a></span> Bootstrapping Lieb-Schultz-Mattis anomalies ***</p>
+<p class="p2"><br></p>
+<p class="p1">20220714</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.05654">https://arxiv.org/abs/2207.05654</a></span> Spinless Mirror Chern Insulator from Projective Symmetry Algebra</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.05754">https://arxiv.org/abs/2207.05754</a></span> Dimensionless physics: continuation *** (G.E. Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.06040">https://arxiv.org/abs/2207.06040</a></span> Quantum many-body scars of spinless fermions with correlated hopping in higher dimensions (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.05956">https://arxiv.org/abs/2207.05956</a></span> The theory of symmetric tensor field: from fractons to gravitons and back *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.05764">https://arxiv.org/abs/2207.05764</a></span> Higgs, Coulomb, and Hall–Littlewood (Monica Jinwoo Kang, Ki-Hong Lee, Jaewon Song)</p>
+<p class="p2"><br></p>
+<p class="p1">20220715</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.06476">https://arxiv.org/abs/2207.06476</a></span> Chiral Kondo Lattice in Doped MoTe2/WSe2 Bilayers *** (Jennifer Cano, J. H. Pixley, Andrew Millis)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.06677">https://arxiv.org/abs/2207.06677</a></span> Revealing 3-dimensional core-shell interface structures at the single- atom level (Yongsoo Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.07066">https://arxiv.org/abs/2207.07066</a></span> Theory of photon condensation in an arbitrary gauge condensed matter cavity model</p>
+<p class="p3"><a href="https://arxiv.org/abs/2207.06433">https://arxiv.org/abs/2207.06433</a><span class="s2"> Symmetry enhancement in RCFT II</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.06443">https://arxiv.org/abs/2207.06443</a></span> Random Magnetic Field and the Dirac Fermi Surface ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.00854">https://arxiv.org/abs/2207.00854</a></span> A symmetry principle for gauge theories with fractons ***** (Minyoung You, Gil Young Cho)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
