--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 
 My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	--><br>
 	
-pdf version of CV: <a href="20220618_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2022/06/18)</a>
+pdf version of CV: <a href="20220718_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2022/07/18)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -154,7 +154,13 @@ Articles related to my works:
 	<div>
 	<div class="cvitemize"> Publication </div>
 		<ul><li><div>
-		<span class="cvitem"> "Non-Fermi liquid behavior and quantum criticality in the multipolar Bose-Fermi Kondo model for cubic heavy fermion systems" </span>
+		<span class="cvitem"> "Microscopic theory of multi-stage Fermi surface reconstruction in heavy fermion systems with quartet multipolar local moments" </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:black">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
+			<a href="https://arxiv.org/abs/2207.07661">arXiv:2207.07661</a>
+		</li><li><div>
+		<span class="cvitem"> "Non-Fermi liquid behavior and quantum criticality in cubic heavy fermion systems with non-Kramers multipolar local moments" </span>
 		<span class="cvperiod"></span>
 		</div>
 		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:black">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
