--- a/arxiv/2022_07_arxiv.html
+++ b/arxiv/2022_07_arxiv.html
@@ -200,7 +200,40 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.07066">https://arxiv.org/abs/2207.07066</a></span> Theory of photon condensation in an arbitrary gauge condensed matter cavity model</p>
 <p class="p3"><a href="https://arxiv.org/abs/2207.06433">https://arxiv.org/abs/2207.06433</a><span class="s2"> Symmetry enhancement in RCFT II</span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.06443">https://arxiv.org/abs/2207.06443</a></span> Random Magnetic Field and the Dirac Fermi Surface ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.00854">https://arxiv.org/abs/2207.00854</a></span> A symmetry principle for gauge theories with fractons ***** (Minyoung You, Gil Young Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.00854">https://arxiv.org/abs/2207.00854</a></span> A symmetry principle for gauge theories with fractons ***** (Minyoung You, Gil Young Cho)</p><br>
+<p class="p1">20220718</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.07128">https://arxiv.org/abs/2207.07128</a></span> Metal to Wigner-Mott insulator transition in two-leg ladders (T. Senthil)</p>
+<p class="p2"><br></p>
+<p class="p1">20220719</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.07661">https://arxiv.org/abs/2207.07661</a></span> Microscopic theory of multi-stage Fermi surface reconstruction in heavy fermion systems with quartet multipolar local moments ***** (SangEun Han, Daniel J. Schultz, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.08585">https://arxiv.org/abs/2207.08585</a></span> Fractons on Graphs and Complexity ***** (Pranay Gorantla, Ho Tat Lam, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.08744">https://arxiv.org/abs/2207.08744</a></span> Kondo destruction and fixed-point annihilation in a Bose-Fermi Kondo model ***** (Haoyu Hu, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.04970">https://arxiv.org/abs/2207.04970</a></span> Quantum corrections to frame-dragging in scattering amplitudes (Jung-Wook Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.04990">https://arxiv.org/abs/2203.04990</a></span> Universal theory of strange metals from spatially random interactions ***** (Aavishkar A. Patel, Haoyu Guo, Ilya Esterlis, Subir Sachdev)</p>
+<p class="p2"><br></p>
+<p class="p1">20220720</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.09449">https://arxiv.org/abs/2207.09449</a></span> Correlated Fractional Dirac Materials ***** (Bitan Roy, Vladimir Juriˇci ́c)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.08829">https://arxiv.org/abs/2207.08829</a></span> Landau-Forbidden Quantum Criticality in Rydberg Quantum Simulators ***** (Jong Yeon Lee, Max A. Metlitski, Soonwon Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.08841">https://arxiv.org/abs/2207.08841</a></span> Large N theory of critical Fermi surfaces II: conductivity ***** (Haoyu Guo, Aavishkar A. Patel, Ilya Esterlis, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.08895">https://arxiv.org/abs/2207.08895</a></span> Anomalous Hall metal and fractional Chern insulator in twisted transition metal dichalcogenides *** (Liang Fu)</p>
+<p class="p2"><br></p>
+<p class="p1">20220721</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.10004">https://arxiv.org/abs/2207.10004</a></span> Hydrodynamic approach to two-dimensional electron systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.09475">https://arxiv.org/abs/2207.09475</a></span> Supersymmetry on the lattice: Geometry, Topology, and Spin Liquids **** (Simon Trebst, Michael J. Lawler)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.10045">https://arxiv.org/abs/2207.10045</a></span> Topology shared between classical metamaterials and interacting superconductors *** (Chao-Ming Jian, Michael J Lawler)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.09465">https://arxiv.org/abs/2207.09465</a></span> Emergent Quantum Mechanics at the Boundary of a Local Classical Lattice Model *** (Kevin Slagle, John Preskill)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.09494">https://arxiv.org/abs/2207.09494</a></span> Andreev reflection spectroscopy in strongly paired superconductors (Jason Alicea)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.08841">https://arxiv.org/abs/2207.08841</a></span> Large N theory of critical Fermi surfaces II: conductivity ***** (Haoyu Guo, Aavishkar A. Patel, Ilya Esterlis, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.04990">https://arxiv.org/abs/2203.04990</a></span> Universal theory of strange metals from spatially random interactions ***** (Aavishkar A. Patel, Haoyu Guo, Ilya Esterlis, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.04104">https://arxiv.org/abs/2203.04104</a></span> A solvable 3D Kondo lattice exhibiting pair density wave, odd-frequency pairing and order fractionalization (Piers Coleman, Alexei Tsvelik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.07781">https://arxiv.org/abs/2112.07781</a></span> Order Fractionalization in a Kitaev-Kondo model (Alexei M. Tsvelik, Piers Coleman)</p>
+<p class="p2"><br></p>
+<p class="p1">20220722</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.10105">https://arxiv.org/abs/2207.10105</a></span> Multichannel topological Kondo effect *** (Yuval Oreg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.10087">https://arxiv.org/abs/2207.10087</a></span> An intermediate-scale theory for electrons coupled to frustrated local-moments (Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.14241">https://arxiv.org/abs/2204.14241</a></span> Non-Hertz-Millis scaling of the antiferromagnetic quantum critical metal via scalable Hybrid Monte Carlo ***** (Peter Lunts)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.05319">https://arxiv.org/abs/2204.05319</a></span> Quantum-critical electrodynamics of Luttinger fermions *** (Joseph Maciejko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06890">https://arxiv.org/abs/2109.06890</a></span> Dynamical Axions in U(1) Quantum Spin Liquids ***</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
