--- a/arxiv/2022_07_arxiv.html
+++ b/arxiv/2022_07_arxiv.html
@@ -233,7 +233,34 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.10087">https://arxiv.org/abs/2207.10087</a></span> An intermediate-scale theory for electrons coupled to frustrated local-moments (Debanjan Chowdhury)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.14241">https://arxiv.org/abs/2204.14241</a></span> Non-Hertz-Millis scaling of the antiferromagnetic quantum critical metal via scalable Hybrid Monte Carlo ***** (Peter Lunts)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.05319">https://arxiv.org/abs/2204.05319</a></span> Quantum-critical electrodynamics of Luttinger fermions *** (Joseph Maciejko)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06890">https://arxiv.org/abs/2109.06890</a></span> Dynamical Axions in U(1) Quantum Spin Liquids ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06890">https://arxiv.org/abs/2109.06890</a></span> Dynamical Axions in U(1) Quantum Spin Liquids ***</p><br>
+<p class="p1">20220725</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.10857">https://arxiv.org/abs/2207.10857</a></span> Critical phenomena around the SU(3) symmetric tri-critical point of a spin-1 chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.10712">https://arxiv.org/abs/2207.10712</a></span> Topological holography: Towards a unification of Landau and beyond-Landau physics ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14197">https://arxiv.org/abs/2206.14197</a></span> Translation-enriched Z2 spin liquids and topological vison bands: Possible application to α-RuCl3 ***** (Xue-Yang Song, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.13527">https://arxiv.org/abs/2206.13527</a></span> Measurement as a shortcut to long-range entangled quantum matter **** (Isaac H. Kim, Timothy H. Hsieh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.01732">https://arxiv.org/abs/2107.01732</a></span> Gauge Theory and the Analytic Form Of The Geometric Langlands Program (Edward Witten)</p>
+<p class="p2"><br></p>
+<p class="p1">20220726</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.11261">https://arxiv.org/abs/2207.11261</a></span> Thermalization and chaos in a 1+1d QFT</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.11252">https://arxiv.org/abs/2207.11252</a></span> Path integral molecular dynamics for anyons, bosons and fermions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.11982">https://arxiv.org/abs/2207.11982</a></span> Quantum-critical conductivity of marginal Fermi-liquids ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.12307">https://arxiv.org/abs/2207.12307</a></span> Superconductor–Insulator Transition in a non-Fermi Liquid **** (Alex Kamenev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.12117">https://arxiv.org/abs/2109.12117</a></span> Large extrinsic phonon thermal Hall effect from resonant scattering (Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.11614">https://arxiv.org/abs/2112.11614</a></span> Why Does Quantum Field Theory In Curved Spacetime Make Sense? And What Happens To The Algebra of Observables In The Thermodynamic Limit? ***** (Edward Witten)</p>
+<p class="p2"><br></p>
+<p class="p1">20220727</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.12418">https://arxiv.org/abs/2207.12418</a></span> The composite fermion theory revisited: a microscopic derivation without Landau level projection</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.12974">https://arxiv.org/abs/2207.12974</a></span> The Geometry of Supersymmetry A concise introduction</p>
+<p class="p2"><br></p>
+<p class="p1">20220728</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.13105">https://arxiv.org/abs/2207.13105</a></span> Competing quantum spin liquids, gauge fluctuations, and anisotropic interactions in a breathing pyrochlore lattice *** (Li Ern Chern, Yong Baek Kim, Claudio Castelnovo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.13161">https://arxiv.org/abs/2207.13161</a></span> Projector formalism for kept and discarded spaces of matrix product states (Jan von Delft)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.08790">https://arxiv.org/abs/2202.08790</a></span> Twisted multilayer nodal superconductors *** (Marcel Franz)</p>
+<p class="p2"><br></p>
+<p class="p1">20220729</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.13748">https://arxiv.org/abs/2207.13748</a></span> The Kosterlitz-Thouless phase transition: an introduction for the intrepid student ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.03580">https://arxiv.org/abs/2009.03580</a></span> Ferromagnetism in d-dimensional SU(n) Hubbard models with nearly flat bands ** (Hosho Katsura)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
